// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalBox Test 1`] = `
.pf-c-modal-box {
  display: block;
}

<div
  aria-modal="true"
  className="pf-c-modal-box"
  label="test label"
  role="dialog"
>
  This is a ModalBox 
</div>
`;

exports[`ModalBox Test isLarge 1`] = `
.pf-c-modal-box.pf-m-lg {
  display: block;
}

<div
  aria-modal="true"
  className="pf-c-modal-box pf-m-lg"
  label="Test Modal label"
  role="dialog"
>
  This is a ModalBox header
</div>
`;

exports[`ModalBox Test isOpen 1`] = `
.pf-c-modal-box.pf-m-lg {
  display: block;
}

<div
  aria-modal="true"
  className="pf-c-modal-box pf-m-lg"
  isOpen={true}
  label="Test Modal label"
  role="dialog"
>
  This is a ModalBox header
</div>
`;
